extra cats and spot calc in align script

--- a/CountsToAnndata/alignment_script.ipynb
+++ b/CountsToAnndata/alignment_script.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 159,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "## The following code ensures that all functions and init files are reloaded before executions.\n",
     "%load_ext autoreload\n",
@@ -23,18 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 160,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Import issue with loess function detected. Probably due to Windows. Error ignored.\n",
-      "Package 'bbknn' not installed here. Error ignored.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -132,8 +132,8 @@
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
-       "      <td>1558 10559 10179 1171</td>\n",
-       "      <td>931 1336 10323 9910</td>\n",
+       "      <td>1567 10566 10176 1179</td>\n",
+       "      <td>937 1335 10316 9911</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -142,8 +142,8 @@
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1457 10424 10022 1058</td>\n",
+       "      <td>961 1360 10347 9943</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -152,8 +152,8 @@
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1515 10497 10137 1121</td>\n",
+       "      <td>913 1323 10300 9895</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -162,8 +162,8 @@
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1368 10380 9984 1006</td>\n",
+       "      <td>892 1302 10267 9947</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -172,8 +172,8 @@
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1426 10443 10049 1033</td>\n",
+       "      <td>951 1344 10321 9919</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -182,8 +182,8 @@
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1410 10387 10007 1001</td>\n",
+       "      <td>876 1277 10257 9839</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -192,8 +192,8 @@
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1458 10445 10033 1070</td>\n",
+       "      <td>867 1214 10189 9778</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -202,8 +202,8 @@
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
        "      <td>N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1385 10341 10043 983</td>\n",
+       "      <td>841 1219 10223 9836</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -231,27 +231,27 @@
        "7  N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...   \n",
        "\n",
        "                                              output             vertices_x  \\\n",
-       "0  N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...  1558 10559 10179 1171   \n",
-       "1  N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...                    NaN   \n",
-       "2  N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...                    NaN   \n",
-       "3  N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...                    NaN   \n",
-       "4  N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...                    NaN   \n",
-       "5  N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...                    NaN   \n",
-       "6  N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...                    NaN   \n",
-       "7  N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...                    NaN   \n",
+       "0  N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...  1567 10566 10176 1179   \n",
+       "1  N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...  1457 10424 10022 1058   \n",
+       "2  N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...  1515 10497 10137 1121   \n",
+       "3  N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...   1368 10380 9984 1006   \n",
+       "4  N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...  1426 10443 10049 1033   \n",
+       "5  N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...  1410 10387 10007 1001   \n",
+       "6  N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...  1458 10445 10033 1070   \n",
+       "7  N:\\01 HPC\\03 Team Meier\\08_Projects\\37_Spatial...   1385 10341 10043 983   \n",
        "\n",
        "            vertices_y  \n",
-       "0  931 1336 10323 9910  \n",
-       "1                  NaN  \n",
-       "2                  NaN  \n",
-       "3                  NaN  \n",
-       "4                  NaN  \n",
-       "5                  NaN  \n",
-       "6                  NaN  \n",
-       "7                  NaN  "
+       "0  937 1335 10316 9911  \n",
+       "1  961 1360 10347 9943  \n",
+       "2  913 1323 10300 9895  \n",
+       "3  892 1302 10267 9947  \n",
+       "4  951 1344 10321 9919  \n",
+       "5  876 1277 10257 9839  \n",
+       "6  867 1214 10189 9778  \n",
+       "7  841 1219 10223 9836  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
