--- a/CountsToAnndata/alignment_script.ipynb
+++ b/CountsToAnndata/alignment_script.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## The following code ensures that all functions and init files are reloaded before executions.\n",
     "%load_ext autoreload\n",
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,12 +53,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read parameters file\n",
-    "settings_file = \"../CountsToAnndata/alignment_parameters.csv\"\n",
+    "#settings_file = \"../CountsToAnndata/alignment_parameters.csv\"\n",
+    "settings_file = \"/home/jwirth/projects/experiments/37_43/CountsToAnndata/37_43_CtoA_params+hq_withvertices.csv\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lines = open(settings_file).readlines()\n",
+    "param_start = [i for i, line in enumerate(lines) if line.startswith(\">parameters\")][0]\n",
+    "dir_start = [i for i, line in enumerate(lines) if line.startswith(\">directories\")][0]\n",
+    "\n",
+    "# read settings file\n",
+    "settings = pd.read_csv(settings_file, header=None)\n",
+    "\n",
+    "# read parameters\n",
+    "parameters = pd.read_csv(settings_file,\n",
+    "                    nrows=dir_start-1).dropna(how='all', axis=0).dropna(how='all', axis=1)\n",
+    "\n",
+    "# check headers of parameters file and set category as index\n",
+    "param_headers = [\"category\", \"value\"]\n",
+    "assert np.all([elem in parameters.columns for elem in param_headers]), \\\n",
+    "    \"Parameters section does not have correct headers ({})\".format(param_headers)                       \n",
+    "\n",
+    "parameters = parameters.set_index('category')\n",
+    "\n",
+    "# read directories\n",
+    "n_headers_dir = len(lines[dir_start].split(\",\")) # get number of headers in directory line\n",
+    "directories = pd.read_csv(settings_file,\n",
+    "                        skiprows=dir_start, usecols=range(1,n_headers_dir)).dropna(how='all', axis=0)\n",
+    "\n",
+    "## Check if all necessary parameters are in the file\n",
+    "param_cats = [\"n_channels\", \"spot_width\", \"frame\", \n",
+    "    \"align_images:align_channel\", \"align_images:dapi_channel\", \"hq_images:channel_names\", \"hq_images:channel_labels\"]\n",
+    "dir_cats = [\"experiment_id\", \"unique_id\", \"input_transcriptome\", \"align_images\", \"hq_images\", \"output\", \"vertices_x\", \"vertices_y\"]\n",
+    "\n",
+    "assert np.all([elem in parameters.index for elem in param_cats]), \\\n",
+    "    \"Not all required categories found in parameter section {}\".format(param_cats)\n",
+    "assert np.all([elem in directories.columns for elem in dir_cats]), \\\n",
+    "    \"Not all required column headers found in directory section {}\".format(dir_cats)\n",
+    "assert ~np.any([pd.isnull(parameters.loc[cat, \"value\"]) for cat in param_cats]), \\\n",
+    "    \"Not all required categories in parameter section have a value.\\nRequired categories are: ({})\".format(param_cats)\n",
+    "\n",
+    "# determine extra categories which are added later to adata.obs\n",
+    "extra_cats_headers = [elem for elem in directories.columns if elem not in dir_cats]\n",
+    "extra_cats_headers = [\"experiment_id\"] + extra_cats_headers\n",
+    "\n",
+    "## extract parameters\n",
+    "# determine alignment channel\n",
+    "alignment_channel = parameters.loc[\"align_images:align_channel\", \"value\"]\n",
+    "dapi_channel = parameters.loc[\"align_images:dapi_channel\", \"value\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "lines = open(settings_file).readlines()\n",
     "param_start = [i for i, line in enumerate(lines) if line.startswith(\">parameters\")][0]\n",
     "dir_start = [i for i, line in enumerate(lines) if line.startswith(\">directories\")][0]\n",
@@ -1390,7 +1442,7 @@
    "hash": "293505d82a019439b957ad4aaaeadb595d5f043ec5f7f0d7434bbbe946c5230f"
   },
   "kernelspec": {
-   "display_name": "Python 3 (spatial)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1404,7 +1456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
