align + reg script working

--- a/CountsToAnndata/alignment_script.ipynb
+++ b/CountsToAnndata/alignment_script.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,6 +111,225 @@
     "# determine alignment channel\n",
     "alignment_channel = parameters.loc[\"align_images:align_channel\", \"value\"]\n",
     "dapi_channel = parameters.loc[\"align_images:dapi_channel\", \"value\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 5\n",
+    "\n",
+    "def test():\n",
+    "    print(a * 2)\n",
+    "\n",
+    "test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'37_43_firstimaging_13x13_10%_2021_10_21__10_05_06-Scene-07-07_c1_stitched_flipped.tif'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.basename('/home/jwirth/projects/experiments/37_43/images/firstimaging/37_43_firstimaging_13x13_10%_2021_10_21__10_05_06-Scene-07-07_c1_stitched_flipped.tif')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[\"a\", \"b\", \"c\"].index(\"b\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[False, True, False, True].index(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "infile = \"/home/jwirth/projects/experiments/37_43/anndata/with_hq_images/37_43_adata_raw_with_images_A1.h5ad\"\n",
+    "\n",
+    "ad = sc.read(infile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20296, 20296)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ad.uns['spatial']['37_43_A1_dapi']['images']['hires'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'images': {'hires': array([[0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         ...,\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0]], dtype=uint8),\n",
+       "  'lowres': array([[0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         ...,\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0]], dtype=uint8)},\n",
+       " 'scalefactors': {'pixel_per_um': 3.9564499810944076,\n",
+       "  'resolution': 50,\n",
+       "  'spot_diameter_fullres': 60,\n",
+       "  'spot_diameter_real': 197.82249905472037,\n",
+       "  'tissue_hires_scalef': 1.0,\n",
+       "  'tissue_lowres_scalef': 0.1,\n",
+       "  'upper_left_spot_coord': array([100, 100])}}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ad.uns['spatial']['37_43_A1_dapi']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       ...,\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ad.uns['registered']['37_43_A1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "'*' is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-a81486927db9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m[\u001b[0m\u001b[0;34m\"a*\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"b\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"c\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"*\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: '*' is not in list"
+     ]
+    }
+   ],
+   "source": [
+    "[\"a*\", \"b\", \"c\"].index(\"*\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-16-0e60ce477e46>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-0e60ce477e46>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    \"test\")\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"test \\\n",
+    "    \"test\")"
    ]
   },
   {
