--- a/publication/notebooks/SpatialMouse_02_QC_Comparison experiments.ipynb
+++ b/publication/notebooks/SpatialMouse_02_QC_Comparison experiments.ipynb
@@ -5,7 +5,7 @@
    "id": "a85b2c5f-3195-4b3f-b4ed-bbf0861c407e",
    "metadata": {},
    "source": [
-    "# SpatialMouse: Comparison of all experiments\n",
+    "# Comparison of internal and external Dbit-seq experiments, xDbit experiments and experiments using characteristics of both methods\n",
     "\n",
     "Experiments to compare:\n",
     "1. Dbit-seq - first experiment - 37_13\n",
