--- a/publication/notebooks/SpatialMouse_01_clean_dataset.ipynb
+++ b/publication/notebooks/SpatialMouse_01_clean_dataset.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8f99b735",
    "metadata": {},
    "source": [
     "# SpatialMouse: Remove background of data"
@@ -10,6 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "af444fcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "a00271d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +36,13 @@
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
     "\n",
-    "import dbitx_funcs as db"
+    "import xdbit_funcs as db"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "0d4754cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,6 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "379bb137",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +70,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8bc4c0d7",
    "metadata": {},
    "source": [
     "## Results until here (see notebook 00):\n",
@@ -95,6 +101,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "65372624",
    "metadata": {},
    "source": [
     "# Load data"
@@ -103,6 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "6557c26f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,6 +132,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "454215ec",
    "metadata": {},
    "source": [
     "### Manually remove and add certain datasets\n",
@@ -134,6 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "996a278f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,6 +162,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7616a83a",
    "metadata": {},
    "source": [
     "## Read per well ID"
@@ -160,6 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "93c5ac55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,6 +213,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fed76fb1",
    "metadata": {},
    "source": [
     "## Select spots containing DAPI signal"
@@ -209,6 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "07cb88d3",
    "metadata": {
     "tags": []
    },
@@ -284,6 +298,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "808ff2b2",
    "metadata": {},
    "source": [
     "## Split data into background and signal"
@@ -292,6 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "2278334f",
    "metadata": {},
    "outputs": [
     {
@@ -332,6 +348,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "15af8eac",
    "metadata": {},
    "source": [
     "## Filter genes for minimum number of spots\n",
@@ -342,6 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "25f16f60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,6 +379,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6784a965",
    "metadata": {
     "tags": []
    },
@@ -370,6 +389,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8804d3bf",
    "metadata": {},
    "source": [
     "## Select signal based on background noise\n",
@@ -402,6 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "17f58261",
    "metadata": {},
    "outputs": [
     {
@@ -501,6 +522,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f66f8ff9",
    "metadata": {
     "tags": []
    },
@@ -513,6 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "e2ed1bce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,6 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "afa1f6e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,6 +566,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d0daad5c",
    "metadata": {},
    "source": [
     "## Statistics on spillover\n",
@@ -553,6 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "6e9ca7fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,6 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "0783f870",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,6 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "891bad90",
    "metadata": {},
    "outputs": [
     {
@@ -636,6 +664,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "31cedabe",
    "metadata": {},
    "source": [
     "# Count statistics"
@@ -643,6 +672,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c07bd576",
    "metadata": {},
    "source": [
     "## Before and after background removal"
@@ -651,6 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "0c3d1cc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,6 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "f4467d04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,6 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "10a912c8",
    "metadata": {},
    "outputs": [
     {
@@ -728,6 +761,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c134f787",
    "metadata": {},
    "source": [
     "# Save data"
@@ -736,6 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "5a4cca1e",
    "metadata": {
     "tags": []
    },
@@ -762,6 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a2011a5c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -783,7 +819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
