--- a/publication/notebooks/SpatialMouse_04_PublicDataset_Comparison_Bulk.ipynb
+++ b/publication/notebooks/SpatialMouse_04_PublicDataset_Comparison_Bulk.ipynb
@@ -36,7 +36,7 @@
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
     "\n",
-    "import dbitx_funcs as db"
+    "import xdbit_funcs as db"
    ]
   },
   {
@@ -761,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
