--- a/publication/notebooks/SpatialMouse_07_deconvolution_cell2location_Kidney_2sections.ipynb
+++ b/publication/notebooks/SpatialMouse_07_deconvolution_cell2location_Kidney_2sections.ipynb
@@ -49,7 +49,7 @@
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
     "\n",
-    "import dbitx_funcs as db\n",
+    "import xdbit_funcs as db\n",
     "\n",
     "import scanpy as sc\n",
     "import matplotlib.pyplot as plt\n",
