add GEO information

--- a/publication/notebooks/SpatialMouse_01_clean_dataset.ipynb
+++ b/publication/notebooks/SpatialMouse_01_clean_dataset.ipynb
@@ -73,7 +73,7 @@
    "id": "8bc4c0d7",
    "metadata": {},
    "source": [
-    "## Results until here (see notebook 00):\n",
+    "## Results until here:\n",
     "\n",
     "### Registration\n",
     "- Registration worked for most samples but not for all.\n",
@@ -104,7 +104,11 @@
    "id": "65372624",
    "metadata": {},
    "source": [
-    "# Load data"
+    "# Load data\n",
+    "\n",
+    "The data for this publication can be found in : https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE207843\n",
+    "<br> Note: Until publication a reviewer token is necessary to access the data.\n",
+    "\n"
    ]
   },
   {
@@ -115,6 +119,7 @@
    "outputs": [],
    "source": [
     "# give directories with anndata files\n",
+    "# this is just an example and needs to be adjusted depending on where the data was downloaded to.\n",
     "anndata_dirs = [\n",
     "    \"D:/data/37_38/anndata/\",\n",
     "    \"D:/data/37_46/anndata/\"\n",
