--- a/publication/notebooks/SpatialMouse_11_RTprimer_stats.ipynb
+++ b/publication/notebooks/SpatialMouse_11_RTprimer_stats.ipynb
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 21,
    "id": "9ecabe12-f243-4dad-88c8-5c290737e45d",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 22,
    "id": "e06431b0",
    "metadata": {},
    "outputs": [],
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 23,
    "id": "ead1f31d-0671-4df3-ba32-543684e107c9",
    "metadata": {},
    "outputs": [
@@ -602,7 +602,7 @@
        " 'C3': AnnData object with n_obs × n_vars = 5391 × 23774}"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 24,
    "id": "99de82b5-1250-443e-a25e-4967455ff53e",
    "metadata": {},
    "outputs": [],
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 25,
    "id": "263c4524-1536-4696-95f4-1b3328d7fbf3",
    "metadata": {},
    "outputs": [],
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 26,
    "id": "37f0c744-dd68-40fe-8ac0-3984601190fa",
    "metadata": {},
    "outputs": [],
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 27,
    "id": "52a9dc4d-65a5-41d6-aafb-77dc46b21384",
    "metadata": {},
    "outputs": [
@@ -815,7 +815,7 @@
        "C3         1.379506  90.017207  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 28,
    "id": "f6dedf9e-e988-4b7e-8adb-4196834f0b1b",
    "metadata": {},
    "outputs": [
@@ -863,8 +863,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "edba2231-fea3-4dbb-91a7-776d6c357e44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "barcodes\n",
+       "A1    13.562081\n",
+       "A2     4.163550\n",
+       "A3     7.841233\n",
+       "B1     4.705902\n",
+       "B3     7.714556\n",
+       "C1    10.954437\n",
+       "C2     7.934957\n",
+       "C3     9.982793\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "100 - perc.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ed40806-4d12-447f-b638-7c9b4f8ed443",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a347979a-2642-4a14-9189-de0b60dea08e",
    "metadata": {},
    "outputs": [],
    "source": []
